tests/FLang.Tests/Harness/errors/error_e2029_integer_suffix_out_of_range.f
//! TEST: integer_suffix_out_of_range
//! COMPILE-ERROR: E2029
pub fn main() i32 {
    let a = 256u8
    return a as i32
}
